scribble-test/src/test/resources/good/wfchoice/merge/Test04b.scr
module good.wfchoice.merge.Test04b;


global protocol Proto1(role A, role B, role C)
{
	rec X
	{
		rec Y
		{
			1() from A to B;
			2() from A to C;
			choice at C
			{
				3() from C to A;
				continue X;
			}
			or
			{
				4() from C to A;
				1() from A to B;  // B only receives 1's, so mergeable
				1() from A to B;
				continue Y;
			}
		}
	}
}


